--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "@dynamic-labs/ethereum": "*",
     "@dynamic-labs/ethers-v6": "*",
     "@dynamic-labs/sdk-react-core": "*",
-    "@types/node": "20.5.4",
-    "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
@@ -23,7 +21,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
-    "viem": "^1.16.5"
+    "viem": "1.0.0",
+    "wagmi": "1.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.11.28",
+    "@types/react": "18.2.66",
+    "typescript": "5.4.2"
   }
 }
