--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@dynamic-labs/ethereum": "*",
     "@dynamic-labs/ethers-v6": "*",
     "@dynamic-labs/sdk-react-core": "*",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.13",
     "@types/node": "20.5.4",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
